// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditionName should initially render with id 1`] = `
<span
  data-testid="loading-1"
>
  EDITION_ID
</span>
`;

exports[`EditionName should render fallback to the id if no app link is found 1`] = `
<span
  data-testid="error"
>
  EDITION_ID
</span>
`;

exports[`EditionName should render the link 1`] = `
<span
  data-testid="loading-1"
>
  EDITION_ID
</span>
`;

exports[`EditionName should render the link 2`] = `
<span
  data-testid="loading-2"
>
  EDITION_ID
</span>
`;

exports[`EditionName should render the link 3`] = `
<span
  data-testid="loaded"
>
  EDITION_NAME
</span>
`;

exports[`EditionName should render the link 4`] = `
<div>
  <a
    class="svelte-1c0jp0i"
    href="LINK"
    target="_self"
  >
    <span
      data-testid="loaded"
    >
      EDITION_NAME
    </span>
  </a>
  
  
</div>
`;
